# lab-colors

./: .coderabbit.yaml  .git-pr-body.md  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/labcolors-core/: Cargo.toml
crates/labcolors-core/benches/: jp_inv.rs  resolve_set.rs  y_hk.rs
crates/labcolors-core/examples/: bench_resolve_set.rs
crates/labcolors-core/src/: chromafast.rs  curve.rs  golden_tests.rs  greyfast.rs  lcs.rs  lib.rs  lpc.rs  lut.rs  neutral.rs  scale.rs  semantic.rs  sentiment.rs  solve.rs  wcag.rs
crates/labcolors-core/src/lut/: lut_data.rs
crates/labcolors-core/src/spaces/: cam16.rs  cat16.rs  oklab.rs  srgb.rs  vc.rs
crates/labcolors-core/src/spaces/srgb/: gamma_data.rs
crates/labcolors-core/tests/: accent_golden.rs  continuity.rs  dim_tinted.rs  hue_sweep.rs  symmetry.rs
crates/labcolors-preview/: Cargo.toml
crates/labcolors-preview/src/: main.rs
crates/labcolors-wasm/: Cargo.toml
crates/labcolors-wasm/src/: cache.rs  dto.rs  engine.rs  error.rs  lib.rs  theme.rs
crates/labcolors-wasm/tests/: wasm_parity.rs
docs/decisions/: apca-license.md  bg-dependency-invariant.md  chromatic-cold-path.md  theme-invariant.md
scripts/: golden_ref.py
